[gd_scene load_steps=5 format=3 uid="uid://dlrym6gwiocn1"]

[ext_resource type="Theme" uid="uid://dk83qmx0ytnuw" path="res://menu/menu_resources/themes/default_theme.tres" id="1_w0d10"]
[ext_resource type="Script" path="res://menu/multiplayer_host_screen.gd" id="2_ipag4"]
[ext_resource type="Texture2D" uid="uid://cvwhr7nkrey7h" path="res://menu/menu_resources/backgrounds/planet1.png" id="3_v7fyy"]
[ext_resource type="PackedScene" uid="uid://yiqeeod0dgy" path="res://menu/player_data_editor.tscn" id="4_m1570"]

[node name="MultiplayerHostScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w0d10")
script = ExtResource("2_ipag4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_v7fyy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="GameInfo" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Players:"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
max_value = 16.0
value = 2.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Map"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "blah"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "blah"

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/GameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "blah"

[node name="ServerInfo" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PortEntry" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "9998"
placeholder_text = "Port"

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host game"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="PlayerDataEditor" parent="MarginContainer/VBoxContainer/HBoxContainer/RightBox" instance=ExtResource("4_m1570")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LeftBox/ServerInfo/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
